<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/goBackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/go_back_description"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_vector" />

        <TextView
            android:id="@+id/editorTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/editor_add_goal_title"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/goBackButton"
            app:layout_constraintStart_toEndOf="@+id/goBackButton"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/editor_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/editorActionTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_button_ripple"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

</androidx.constraintlayout.widget.ConstraintLayout>