<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:paddingHorizontal="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/submit_delete_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/submitDeleteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:text="@string/submit_delete_title"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yesButton"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/main_button_ripple"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/yes"
                android:textSize="20sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/noButton"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/main_button_ripple"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/no"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>